debug hiển thị linechart